# gregorio

./: .gregorio-version  CHANGELOG.md  CONTRIBUTING.md  COPYING.md  Makefile.am  UPGRADE.md  VersionManager.py  configure.ac  coverage.sh  ctan-o-mat.config  ctan_upload.sh  def_check.sh  doc_check.sh  install-gtex.sh  install.sh
contrib/: 900_gregorio.xml  Makefile.am  add_shell_escape.sh  checkSyllabation.py  gabc.lang  gprocess
contrib/TeXShop/: Makefile.am
debian/: copyright  manpage.xml
doc/: Appendix_Font_Tables.tex  Command_Index_User.tex  Command_Index_gregorio.tex  Command_Index_internal.tex  Gabc.tex  GregorioNabcRef.tex  GregorioRef.lua  GregorioRef.tex  Makefile.am  doc_README.md  gsp-sample.tex
examples/: Makefile.am
fonts/: Makefile.am  convertsfdtottf.py  granapadano-base.sfd  greciliae-base.sfd  gregorio-base.sfd  gresgmodern.sfd  install_supp_fonts.lua  simplify.py  squarize.py  stemsschemas.py
macosx/: Gregorio.pkgproj  Makefile.am  douninstall.sh
src/: Makefile.am  bool.h  characters.c  characters.h  config.h  encode_utf8strings.c  enum_generator.h  gregorio-utils.c  messages.c  messages.h  plugins.h  sha1.c  sha1.h  struct.c  struct.h  struct_iter.h  support.c  support.h  unicode.c  unicode.h  utf8strings.h.in
src/dump/: dump.c
src/gabc/: gabc-elements-determination.c  gabc-glyphs-determination.c  gabc-notes-determination.l  gabc-score-determination.c  gabc-score-determination.h  gabc-score-determination.l  gabc-score-determination.y  gabc-write.c  gabc.h
src/gregoriotex/: gregoriotex-position.c  gregoriotex-write.c  gregoriotex.h
src/vowel/: vowel-rules.h  vowel-rules.l  vowel-rules.y  vowel.c  vowel.h
tex/: Makefile.am  gregoriosyms.sty  gregoriotex-chars.tex  gregoriotex-common.tex  gregoriotex-gsp-default.tex  gregoriotex-main.tex  gregoriotex-nabc.lua  gregoriotex-nabc.tex  gregoriotex-signs.lua  gregoriotex-signs.tex  gregoriotex-spaces.tex  gregoriotex-syllable.tex  gregoriotex-symbols.lua  gregoriotex-symbols.tex  gregoriotex.lua  gregoriotex.sty  gregoriotex.tex
windows/: Makefile.am  gregorio-resources.rc  gregorio.iss  install.lua  uninstall.lua
